[project]
name = "aioxmlrpc"
description = "XML-RPC client for asyncio"
version = "0.8.1"
readme = "README.rst"
license = { text = "MIT License" }
authors = [{ name = "Guillaume Gauvrit", email = "guillaume@gauvr.it" }]
requires-python = ">=3.9"

dependencies = ["httpx >=0.24, <1"]

[tool.pdm.build]
includes = ["src", "CHANGELOG.rst"]
excludes = ["tests"]

[project.urls]
Homepage = "https://mardiros.github.io/aioxmlrpc"
Documentation = "https://mardiros.github.io/aioxmlrpc"
Repository = "https://github.com/mardiros/aioxmlrpc.git"
Issues = "https://github.com/mardiros/aioxmlrpc/issues"
Changelog = "https://mardiros.github.io/aioxmlrpc/user/changelog.html"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
ignore = ["examples"]
include = ["src", "tests"]
typeCheckingMode = "basic"
venvPath = ".venv"

[dependency-groups]
dev = ["pytest >=8.3.3,<9", "pytest-asyncio >=0.24.0", "pytest-cov >=6.0.0,<7"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
